--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Robert Bogaczyk - Usługi budowlane. Kompleksowe usługi remontowe, od projektowania po wykończenie.
+      Doświadczenie i zaangażowanie gwarantują najwyższą jakość i satysfakcję.</title>
   </head>
   <body>
     <div id="root"></div>
