fix: robot and sitemap files, hero button, opening project img at projects page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="pl">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robert Bogaczyk - Usługi budowlane. Kompleksowe usługi remontowe, od projektowania po wykończenie.
-      Doświadczenie i zaangażowanie gwarantują najwyższą jakość i satysfakcję.</title>
-  </head>
-  <body>
+    <title>Usługi Remontowe Szczecin - Robert Bogaczyk | Kompleksowe Wykończenia</title>
+    <meta name="description" content="Robert Bogaczyk oferuje kompleksowe usługi remontowo-wykończeniowe w Szczecinie. Profesjonalne malowanie, szpachlowanie, układanie płytek i wiele więcej. Sprawdź ofertę!" />
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
